Kong Global Gateway With ExternalName/apps/payments/payments-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: payments-team
  name: payments-team
