Kong Global Gateway With ExternalName/apps/payments/payment-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-svc
  namespace: payments-team
spec:
  selector:
    app: payment-gateway-svc
  ports:
    - port: 7072
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-svc
  namespace: payments-team
  labels:
    app: payment-gateway-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway-svc
  template:
    metadata:
      labels:
        app: payment-gateway-svc
    spec:
      serviceAccountName: payment-gateway-svc
      containers:
        - name: payment-gateway-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
