Kong Global Gateway With ExternalName/apps/payments/01-payments-kong-api-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: payments-kic
  name: payments-kic
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: payments-kong-api-gateway
  namespace: payments-kic
spec:
  gatewayClassName: payments-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: payments-team
