Kong Global Gateway With ExternalName/apps/payments/02-transfer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transfer-httproute
  namespace: payments-team
  annotations:
    konghq.com/plugins: rate-limit-payments,key-auth-payments
spec:
  parentRefs:
  - name: payments-kong-api-gateway
    namespace: payments-kic
  hostnames:
  - "payments.mini-apps.click"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: transfer-svc.payments-team.svc.cluster.local
    backendRefs:
    - kind: Service
      name: transfer-svc
      port: 7071
