Kong Global Gateway With ExternalName/apps/payments/transfer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: transfer-httproute
  namespace: payments-team
spec:
  parentRefs:
  - name: payments-kong-api-gateway
    namespace: payments-kic
  hostnames:
  - "payments.mini-apps.click"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: transfer-svc
      port: 7071
